--- a/front_end/app/globals.css
+++ b/front_end/app/globals.css
@@ -1,5 +1,5 @@
-.cs-message-input__tools .cs-button--attachment {
-  display: none !important;
+.rce-container-input {
+    min-width: 90% !important;
 }
 :root {
   --message-text-light: #000;
