--- a/front_end/app/page.module.css
+++ b/front_end/app/page.module.css
@@ -27,15 +27,21 @@
 }
 
 .nextbutton {
-  background-color: #55829b;
+  background: rgba(50, 50, 50, 0.5);
   color: white;
-  border: none;
-  padding: 10px 5px;
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 12px;
+  padding: 12px 30px;
   border-radius: 15px;
   font-size: 16px;
   text-align: center;
   display: block;
-  transition: background-color 0.3s;
+  transition: all 0.3s ease-in-out;
+  position: relative;
+   overflow: hidden;
+  box-shadow: 0 16px 40px rgba(0, 0, 0, 0.8);
+  animation: glow-pulse 1.5 infinite alternate;
   width: 200px;
   font-style: bold;
   font-family: Arial, Helvetica, sans-serif;
@@ -43,20 +49,85 @@
   margin-top: 10px;
   margin-bottom: 88px;
 }
-
-.nextbutton:hover {
-  background-color: #2e89ba;
+ /* تأثير التوهج حول الزر */
+.nextbutton::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  background: linear-gradient(#45deg, #ff00ff, #00ffff);
+  border-radius: 12px;
+  z-index: -1;
+  filter: blur(10px);
+  opacity: 0.7;
+  transition: opacity 0.3s ease-in-out, filter 0.3s ease-in-out;
 }
-
+/* تأثير الإطار عند المرور */
+.nextbutton:hover::before {
+   opacity: 1;
+   filter: blur(30px);
+}
+/* أنيميشن عند التحريك */
+.nextbutton:hover {
+   transform: scale(1.1);
+   box-shadow: 0 0 35px rgba(255, 255, 255, 0.8);;
+}
+/* تأثير الموجة عند الضغط */
+.nextbutton:active::after {
+   content: "";
+   position: absolute;
+   width: 400%;
+   height: 400%;
+   background: rgba(255, 255, 255, 0.3);
+   top: 50%;
+   left:50%;
+   transform: translate(-50%, -50%) scale(0);
+   border-radius: 50%;
+   animation: ripple 0.6s ease-out;
+}
+ /* أنيميشن التوهج النبضي */
+@keyframes glow-pulse {
+    0% {
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.6);
+       }
+    100% {
+        box-shadow: 0 0 40px rgba(255, 255, 255, 0.9);
+        }
+}
+/* أنيميشن الموجة */
+@keyframes ripple {
+    0% {
+        transform: translate(-50%, -50%) scale(0);
+        opacity: 0.8;
+       }
+    50% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 0.5;
+        }
+    100% {
+         transform: translate(-50%, -50%) scale(2);
+         opacity: 0;
+         }
+}
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+        }
+    50% {
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+        }
+    100% {
+        box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+        }
+}
 .description {
   text-align: center;
   line-height: 1;
   margin-bottom: 50px;
 }
-.image{
-    width:500px;
-    height:400px;
-}
+
 .hiddendiv{
     display:none;
 }
@@ -104,7 +175,11 @@
     align-items: center;
     cursor: pointer;
 }
-
+.image{
+    text-align: center;
+    margin-right:37px;
+    cursor: pointer;
+}
 @media (max-width:1000px){
     .modebutton{
         top: 10px;
