--- a/front_end/app/page.module.css
+++ b/front_end/app/page.module.css
@@ -180,6 +180,7 @@
     text-align: center;
     margin-right:37px;
     cursor: pointer;
+    margin-top:60px;
 }
 .floating_button{
   position: fixed;
@@ -246,55 +247,62 @@
   color: #6b7280;
 }
 
-@media (max-width:1000px){
-    .modebutton{
-        top: 10px;
-        right: 10px;
-        padding: 15px 25px;
-    }
-    .modebutton:hover {
-         padding: 20px 30px;
-    }
-   .image{
-        width:400px;
-        height:300px;
-   }
+@media (max-width: 375px) {
+  .modebutton {
+    top: 8px;
+    right: 8px;
+    padding: 10px 15px;
+  }
+
+  .image {
+    width: 100%;
+    height: auto;
+    margin: 10px auto;
+    margin-top: 80px;
+  }
+
+  .description {
+    font-size: 0.9rem;
+    margin: 10px;
+  }
+
+  .nextbutton {
+    width: 90%;
+    font-size: 14px;
+    padding: 10px;
+  }
 }
-@media (min-height:600px) and (max-height:800px){
-    .modebutton{
-        top: 10px;
-        right: 10px;
-        padding: 20px 30px;
-    }
-    .modebutton:hover {
-         padding: 30px 40px;
-    }
-   .image{
-        width:400px;
-        height:300px;
-        margin-top:30px;
-   }
-   .description{
-        margin-top:20px;
-        margin-bottom:30px;
-   }
+
+@media (min-width: 376px) and (max-width: 480px) {
+  .image {
+    width: 90%;
+    height: auto;
+    margin-top: 50px;
+  }
+
+  .nextbutton {
+    width: 80%;
+    padding: 12px 20px;
+    font-size: 15px;
+  }
+
+  .modebutton {
+    padding: 12px 18px;
+  }
 }
-@media (min-height:801px) and (max-height:1000px){
-    .modebutton{
-        top: 10px;
-        right: 10px;
-        padding: 20px 30px;
-    }
-    .modebutton:hover {
-         padding: 30px 40px;
-    }
-   .image{
-        width:400px;
-        height:300px;
-        margin-top:100px;
-   }
-   .description{
-        margin-top:50px;
-        margin-bottom:100px;
-   }
+
+@media (min-width: 481px) and (max-width: 768px) {
+  .image {
+    width: 80%;
+    margin-top: 50px;
+  }
+
+  .nextbutton {
+    width: 70%;
+    font-size: 16px;
+  }
+
+  .modebutton {
+    padding: 15px 25px;
+  }
 }
