--- a/front_end/app/page.module.css
+++ b/front_end/app/page.module.css
@@ -258,7 +258,7 @@
     width: 100%;
     height: auto;
     margin: 10px auto;
-    margin-top: 80px;
+    margin-top:60Px;
   }
 
   .description {
